--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,13 @@ pdfplumber>=0.10.0
 azure-ai-vision-imageanalysis>=1.0.0
 openai>=1.0.0
 
-# Web scraping (for Phase 2)
+# Web scraping (Phase 2)
 selenium>=4.15.0
+webdriver-manager>=4.0.0
+beautifulsoup4>=4.12.0
+lxml>=4.9.0
 
-# Label generation (for Phase 4)
+# Label generation (Phase 4)
 reportlab>=4.0.0
 pillow>=10.0.0
 
