--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ python-dotenv>=1.0.0
 pdfplumber>=0.10.0
 
 # Azure services
-azure-ai-vision-imageanalysis>=1.0.0
+azure-ai-formrecognizer>=3.3.0
 openai>=1.0.0
 
 # Web scraping (Phase 2)
